# qcad

./: .gitignore  CLAUDE.md  CMakeInclude.txt  CMakeLists.txt  LICENSE-EXCEPTIONS.txt  LICENSE.txt  README.md  ccache.pri  gpl-3.0-exceptions.txt  merge  merge.bat  qcad  qcad.1  qcad.desktop  qcad.dox  qcad.doxyfile  qcad.pro  qcad.sln  qcad_application_framework.dox  qcad_application_framework.doxyfile  qcad_application_framework.pro  qcad_debug  qcad_release  readme.txt  shared.pri  shared.rc  shared_app.pri  shared_ts.pri
src/: CMakeLists.txt  qcadsrc.sln  src.pro
src/console/: CMakeLists.txt  console.pro
src/core/: CMakeLists.txt  RAction.cpp  RAction.h  RActionAdapter.h  RArcExporter.cpp  RArcExporter.h  RBlock.cpp  RBlock.h  RBlockListener.h  RBlockProxy.h  RBlockReferenceData.cpp  RBlockReferenceData.h  RBlockReferenceEntity.cpp  RBlockReferenceEntity.h  RClipboardListener.h  RCloseCurrentEvent.h  RColor.cpp  RColor.h  RColorCodes.h  RCommandEvent.cpp  RCommandEvent.h  RCoordinateEvent.cpp  RCoordinateEvent.h  RCoordinateListener.h  RCoordinateListenerAdapter.h  RDebug.cpp  RDebug.h  RDimStyle.cpp  RDimStyle.h  RDimStyleData.cpp  RDimStyleData.h  RDimStyleProxy.h  RDocument.cpp  RDocument.h  RDocumentInterface.cpp  RDocumentInterface.h  RDocumentVariables.cpp  RDocumentVariables.h  RDxfServices.cpp  RDxfServices.h  (+236 more)
src/customwidgets/: CMakeLists.txt  RCharacterWidgetPlugin.cpp  RCharacterWidgetPlugin.h  RColorComboPlugin.cpp  RColorComboPlugin.h  RComboBoxPlugin.cpp  RComboBoxPlugin.h  RCommandLinePlugin.cpp  RCommandLinePlugin.h  RCustomWidgets.cpp  RCustomWidgets.h  RFontChooserWidgetPlugin.cpp  RFontChooserWidgetPlugin.h  RGraphicsViewGlPlugin.cpp  RGraphicsViewGlPlugin.h  RGraphicsViewQtPlugin.cpp  RGraphicsViewQtPlugin.h  RLinetypeComboPlugin.cpp  RLinetypeComboPlugin.h  RLineweightComboPlugin.cpp  RLineweightComboPlugin.h  RListViewPlugin.cpp  RListViewPlugin.h  RMathComboBoxPlugin.cpp  RMathComboBoxPlugin.h  RMathLineEditPlugin.cpp  RMathLineEditPlugin.h  RMdiChildQtPlugin.cpp  RMdiChildQtPlugin.h  RRulerQtPlugin.cpp  RRulerQtPlugin.h  RShortcutLineEditPlugin.cpp  RShortcutLineEditPlugin.h  RTextEditPlugin.cpp  RTextEditPlugin.h  RWebViewPlugin.cpp  RWebViewPlugin.h  customwidgets.dox  customwidgets.pro  customwidgets.rc  (+2 more)
src/entity/: CMakeLists.txt  RArcData.cpp  RArcData.h  RArcEntity.cpp  RArcEntity.h  RAttributeData.cpp  RAttributeData.h  RAttributeDefinitionData.cpp  RAttributeDefinitionData.h  RAttributeDefinitionEntity.cpp  RAttributeDefinitionEntity.h  RAttributeEntity.cpp  RAttributeEntity.h  RCircleData.cpp  RCircleData.h  RCircleEntity.cpp  RCircleEntity.h  RCustomEntity.cpp  RCustomEntity.h  RCustomEntityHandler.h  RCustomEntityRegistry.cpp  RCustomEntityRegistry.h  RDimAlignedData.cpp  RDimAlignedData.h  RDimAlignedEntity.cpp  RDimAlignedEntity.h  RDimAngular2LData.cpp  RDimAngular2LData.h  RDimAngular2LEntity.cpp  RDimAngular2LEntity.h  RDimAngular3PData.cpp  RDimAngular3PData.h  RDimAngular3PEntity.cpp  RDimAngular3PEntity.h  RDimAngularData.cpp  RDimAngularData.h  RDimAngularEntity.cpp  RDimAngularEntity.h  RDimArcLengthData.cpp  RDimArcLengthData.h  (+106 more)
src/grid/: CMakeLists.txt  ROrthoGrid.cpp  ROrthoGrid.h  grid.dox  grid.pro  grid.rc  grid_global.h  qcadgrid.vcxproj  qcadgrid.vcxproj.filters
src/gui/: CMakeLists.txt  RCadToolBar.cpp  RCadToolBar.h  RCadToolBarPanel.cpp  RCadToolBarPanel.h  RCharacterWidget.cpp  RCharacterWidget.h  RCloseCurrentEvent.h  RColorCombo.cpp  RColorCombo.h  RColumnLayout.cpp  RColumnLayout.h  RComboBox.cpp  RComboBox.h  RCommandLine.cpp  RCommandLine.h  RDockWidget.cpp  RDockWidget.h  REventFilter.cpp  REventFilter.h  REventHandler.cpp  REventHandler.h  RFileSystemModel.cpp  RFileSystemModel.h  RFlowLayout.cpp  RFlowLayout.h  RFocusFrame.cpp  RFocusFrame.h  RFontChooserWidget.cpp  RFontChooserWidget.h  RGraphicsSceneDrawable.cpp  RGraphicsSceneDrawable.h  RGraphicsSceneQt.cpp  RGraphicsSceneQt.h  RGraphicsViewGl.cpp  RGraphicsViewGl.h  RGraphicsViewImage.cpp  RGraphicsViewImage.h  RGraphicsViewQt.cpp  RGraphicsViewQt.h  (+50 more)
src/io/: CMakeLists.txt  io.dox  io.pro  qcadio.sln
src/operations/: CMakeLists.txt  RAddObjectOperation.cpp  RAddObjectOperation.h  RAddObjectsOperation.cpp  RAddObjectsOperation.h  RChangePropertyOperation.cpp  RChangePropertyOperation.h  RClickReferencePointOperation.cpp  RClickReferencePointOperation.h  RClipboardOperation.cpp  RClipboardOperation.h  RCopyOperation.cpp  RCopyOperation.h  RDeleteAllEntitiesOperation.cpp  RDeleteAllEntitiesOperation.h  RDeleteObjectOperation.cpp  RDeleteObjectOperation.h  RDeleteObjectsOperation.cpp  RDeleteObjectsOperation.h  RDeleteSelectionOperation.cpp  RDeleteSelectionOperation.h  RMixedOperation.cpp  RMixedOperation.h  RModifyObjectOperation.cpp  RModifyObjectOperation.h  RModifyObjectsOperation.cpp  RModifyObjectsOperation.h  RMoveReferencePointOperation.cpp  RMoveReferencePointOperation.h  RMoveSelectionOperation.cpp  RMoveSelectionOperation.h  RMultiOperation.cpp  RMultiOperation.h  ROperationUtils.cpp  ROperationUtils.h  RPasteOperation.cpp  RPasteOperation.h  RScaleSelectionOperation.cpp  RScaleSelectionOperation.h  RTransformation.h  (+7 more)
src/run/: CMakeInclude.txt  CMakeLists.txt  Info.plist  InfoAssistant.plist  InfoCam.plist  document.icns  main.cpp  qcad.aps  qcad.icns  qcad.rc  qcad.vcxproj  qcad.vcxproj.filters  qcadassistant.icns  qcadlibrarybrowser.icns  removemacmenus.h  removemacmenus.mm  run.dox  run.pri  run.pro
src/scripting/: CMakeLists.txt  REcmaHelper.h  qcadscripting.sln  scripting.pro
src/scripts/: CMakeLists.txt  RScriptsPlugin.cpp  RScriptsPlugin.h  qcadscripts.vcxproj  qcadscripts.vcxproj.filters  scripts.pro  scripts.qrc  scripts.rc  scripts_release.qrc  update_qrc.sh
src/snap/: CMakeLists.txt  RRestrictAngleLength.cpp  RRestrictAngleLength.h  RRestrictHorizontal.cpp  RRestrictHorizontal.h  RRestrictOff.cpp  RRestrictOff.h  RRestrictOrthogonal.cpp  RRestrictOrthogonal.h  RRestrictVertical.cpp  RRestrictVertical.h  RSnapAuto.cpp  RSnapAuto.h  RSnapCenter.cpp  RSnapCenter.h  RSnapDistance.cpp  RSnapDistance.h  RSnapEnd.cpp  (+27 more)
(+53032 files in other folders)
