cmake_minimum_required(VERSION 3.16)

include(../CMakeInclude.txt)

project(src VERSION 1.0 LANGUAGES CXX)

add_subdirectory(3rdparty)
add_subdirectory(core)
add_subdirectory(spatialindex)
add_subdirectory(entity)
add_subdirectory(grid)
add_subdirectory(snap)
add_subdirectory(operations)
add_subdirectory(io)
add_subdirectory(gui)
add_subdirectory(stemmer)
add_subdirectory(customwidgets)
add_subdirectory(run)
add_subdirectory(scripts)
if(NOT BUILD_QT6)
    message("Qt 5")
    add_subdirectory(scripting)
endif()

if (WIN32)
    add_subdirectory(console)
endif()
